from registro y lista usuarios

--- a/view-usuario/angular.json
+++ b/view-usuario/angular.json
@@ -64,7 +64,8 @@
             "production": {
               "browserTarget": "view-usuario:build:production"
             }
-          }
+          },
+          "proxyConfig": "./proxy.config.js"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
